--- a/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Cart/CartContent.cshtml
@@ -58,7 +58,7 @@
 
                     <div class="cart_buttons">
 
-                        <button type="button" class="button cart_button_checkout">Confirm Order</button>
+                        <button type="button" class="button cart_button_checkout" onclick="location.href='@Url.Action("OrderInfo" ,"Order",routeValues:new { })'">Confirm Order</button>
                     </div>
                 </div>
             </div>
