--- a/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
+++ b/MdeicalStoreApplication/MedicalStore/Views/Shared/_Layout.cshtml
@@ -91,25 +91,7 @@
                         </div>
 
                         <!-- Search -->
-                        <div class="col-lg-6 col-12 order-lg-2 order-3 text-lg-left text-right">
-                            <div class="header_search">
-                                <div class="header_search_content">
-                                    <div class="header_search_form_container">
-                                        <form action="#" class="header_search_form clearfix">
-                                            <input type="search"
-                                                   required="required"
-                                                   class="header_search_input"
-                                                   placeholder="Search for products..." />
-                                            <button type="submit"
-                                                    class="header_search_button trans_300"
-                                                    value="Submit">
-                                                <i class="fas fa-search" style="color:#fff"></i>
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        @{Html.RenderAction("Search", "Product"); }
 
                         <!-- Wishlist -->
                         <div class="col-lg-4 col-9 order-lg-3 order-2 text-lg-left text-right">
